After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 690310 - Fix compilation of GduSdPlugin with newer gnome-settings-daemon
Fix compilation of GduSdPlugin with newer gnome-settings-daemon
Status: RESOLVED FIXED
Product: gnome-disk-utility
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gnome-disk-utility-maint
gnome-disk-utility-maint
Depends on:
Blocks:
 
 
Reported: 2012-12-16 21:49 UTC by Giovanni Campagna
Modified: 2012-12-18 21:22 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix compilation of GduSdPlugin with newer gnome-settings-daemon (7.22 KB, patch)
2012-12-16 21:49 UTC, Giovanni Campagna
committed Details | Review

Description Giovanni Campagna 2012-12-16 21:49:20 UTC
gnome-settings-daemon changed the definition of the registration macro,
which now assumes a Manager object providing start() and stop() methods,
and no longer lets the plugin implement any code.
Comment 1 Giovanni Campagna 2012-12-16 21:49:23 UTC
Created attachment 231670 [details] [review]
Fix compilation of GduSdPlugin with newer gnome-settings-daemon
Comment 2 David Zeuthen (not reading bugmail) 2012-12-17 15:34:23 UTC
If you're renaming the type, I think you should also rename the files to gdusdmanager.[ch]. OK to commit with that change. Thanks.
Comment 3 Giovanni Campagna 2012-12-17 16:43:45 UTC
Attachment 231670 [details] pushed as 53555aa - Fix compilation of GduSdPlugin with newer gnome-settings-daemon
Comment 4 David Zeuthen (not reading bugmail) 2012-12-18 21:22:15 UTC
I ended up having to add this commit

 http://git.gnome.org/browse/gnome-disk-utility/commit/?id=409f0f4e37c301cf05839a00f445fe3dcd933197

to deal with the g-s-d API borkage.