Fix compilation of GduSdPlugin with newer gnome-settings-daemon

gnome-settings-daemon changed the definition of the registration macro,
which now assumes a Manager object providing start() and stop() methods,
and no longer lets the plugin implement any code.

https://bugzilla.gnome.org/show_bug.cgi?id=690310