src/notify/gdusdmanager.h
@@ -16,14 +16,14 @@
 
 G_BEGIN_DECLS
 
-#define GDU_TYPE_SD_PLUGIN_PLUGIN  (gdu_sd_plugin_get_type ())
-#define GDU_SD_PLUGIN(o)    (G_TYPE_CHECK_INSTANCE_CAST ((o), GDU_TYPE_SD_PLUGIN_PLUGIN, GduSdPlugin))
-#define GDU_IS_SD_PLUGIN_PLUGIN(o) (G_TYPE_CHECK_INSTANCE_TYPE ((o), GDU_TYPE_SD_PLUGIN_PLUGIN))
+#define GDU_TYPE_SD_MANAGER  (gdu_sd_manager_get_type ())
+#define GDU_SD_MANAGER(o)    (G_TYPE_CHECK_INSTANCE_CAST ((o), GDU_TYPE_SD_MANAGER, GduSdManager))
+#define GDU_IS_SD_MANAGER(o) (G_TYPE_CHECK_INSTANCE_TYPE ((o), GDU_TYPE_SD_MANAGER))
 
-struct GduSdPlugin;
-typedef struct GduSdPlugin GduSdPlugin;
+struct GduSdManager;
+typedef struct GduSdManager GduSdManager;
 
-GType gdu_sd_plugin_get_type (void) G_GNUC_CONST;
+GType gdu_sd_manager_get_type (void) G_GNUC_CONST;
 
 /* All the plugins must implement this function */
 G_MODULE_EXPORT GType register_gnome_settings_plugin (GTypeModule *module);
